turbopack/crates/turbopack/tests/node-file-trace/integration/ts-paths/pass/catch-all.ts
import { catchAll as catchAll1 } from "catch-all1";
import { catchAll as catchAll2 } from "catch-all2";
console.log(catchAll1, catchAll2);
