turbopack/crates/turbopack/tests/node-file-trace/integration/ts-paths/fail/alt-folders.ts
import { alt1 } from "fixtures/alt-folders/alt1.js";
import { alt2 } from "fixtures/alt-folders/alt2.js";
console.log(alt1, alt2);
